Fixed issue #23 and #24, button text no longer wrapping on questionnaire review page, splash page no longer wants to scroll horizontally

--- a/career-guide/client/css/index.css
+++ b/career-guide/client/css/index.css
@@ -51,7 +51,6 @@
 }
 
 .splash {
-  width: 95%;
   max-width: 30em;
   background-color: var(--main-bg-color);
   box-shadow: 0 0 0.25rem 0.01rem var(--davys-gray);
@@ -379,6 +378,7 @@ button {
   justify-content: space-around;
   margin: 0.5em auto auto;
   width: inherit;
+  white-space: nowrap;
 }
 
 .question-answer > * {
